; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_smi.c___smi_check_forward_dr_smp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_smi.c___smi_check_forward_dr_smp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IB_SMI_FORWARD = common dso_local global i32 0, align 4
@IB_SMI_SEND = common dso_local global i32 0, align 4
@IB_SMI_LOCAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32)* @__smi_check_forward_dr_smp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__smi_check_forward_dr_smp(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %44, label %14

14:                                               ; preds = %5
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @IB_SMI_FORWARD, align 4
  store i32 %22, i32* %6, align 4
  br label %68

23:                                               ; preds = %17, %14
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %36

27:                                               ; preds = %23
  %28 = load i32, i32* %10, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %27
  %31 = load i32, i32* @IB_SMI_SEND, align 4
  br label %34

32:                                               ; preds = %27
  %33 = load i32, i32* @IB_SMI_LOCAL, align 4
  br label %34

34:                                               ; preds = %32, %30
  %35 = phi i32 [ %31, %30 ], [ %33, %32 ]
  store i32 %35, i32* %6, align 4
  br label %68

36:                                               ; preds = %23
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %8, align 4
  %39 = add nsw i32 %38, 1
  %40 = icmp eq i32 %37, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %36
  %42 = load i32, i32* @IB_SMI_SEND, align 4
  store i32 %42, i32* %6, align 4
  br label %68

43:                                               ; preds = %36
  br label %66

44:                                               ; preds = %5
  %45 = load i32, i32* %7, align 4
  %46 = icmp sle i32 2, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %44
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* %8, align 4
  %50 = icmp sle i32 %48, %49
  br i1 %50, label %51, label %53

51:                                               ; preds = %47
  %52 = load i32, i32* @IB_SMI_FORWARD, align 4
  store i32 %52, i32* %6, align 4
  br label %68

53:                                               ; preds = %47, %44
  %54 = load i32, i32* %7, align 4
  %55 = icmp eq i32 %54, 1
  br i1 %55, label %56, label %65

56:                                               ; preds = %53
  %57 = load i32, i32* %11, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %61, label %59

59:                                               ; preds = %56
  %60 = load i32, i32* @IB_SMI_SEND, align 4
  br label %63

61:                                               ; preds = %56
  %62 = load i32, i32* @IB_SMI_LOCAL, align 4
  br label %63

63:                                               ; preds = %61, %59
  %64 = phi i32 [ %60, %59 ], [ %62, %61 ]
  store i32 %64, i32* %6, align 4
  br label %68

65:                                               ; preds = %53
  br label %66

66:                                               ; preds = %65, %43
  %67 = load i32, i32* @IB_SMI_LOCAL, align 4
  store i32 %67, i32* %6, align 4
  br label %68

68:                                               ; preds = %66, %63, %51, %41, %34, %21
  %69 = load i32, i32* %6, align 4
  ret i32 %69
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
